<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_passed"
                    android:text="@string/time_passed"
                    android:gravity="center"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/task_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textSize="12sp" />

                <View
                    android:layout_width="125sp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="#FFFFFF"
                    android:layout_marginVertical="4dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description_for_the_task"
                android:maxLines="4"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:layout_marginVertical="4dp" />

            <CheckBox
                android:id="@+id/task_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/completed" />

            <TextView
                android:id="@+id/task_created_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                tools:text="Created: 00/00/0000 at 00:00"
                android:textSize="12sp"
                android:maxLines="1" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>